--- a/03-nginx.yaml
+++ b/03-nginx.yaml
@@ -4,10 +4,11 @@
   tasks: 
   - name: install nginx
     ansible.builtin.package:
-    - name: nginx 
+      name: nginx 
       state: present 
+      
   - name: run nginx 
     ansible.builtin.service: 
-    - name: nginx 
+      name: nginx 
       state: started 
       enabled: yes 
